# Google-Vertex-AI-Claude-API-Web-UI

./: .aidigestignore  .gitignore  .repopackignore  README.md  codebase.md  config.py  main.py  pyproject.toml  repopack-output.txt  repopack-output.xml  repopack.config.json
styles/: main.css
ui/: __init__.py  chat_interface.py  file_upload.py
utils/: __init__.py  claude_client.py  file_handler.py  message_handler.py  session.py
